--- a/.travis.yml
+++ b/.travis.yml
@@ -11,18 +11,26 @@ php:
   - "7.3"
   - "7.2"
   - "7.1"
+  - "5.6"
+  - "7.4snapshot"
+  - "nightly"
 
 env:
   - CONTAO_VERSION=contao/core-bundle ~4.4.0
+  - CONTAO_VERSION=contao/core-bundle ~4.7.0
   - CONTAO_VERSION=contao/core-bundle ~4.5.0
   - CONTAO_VERSION=contao/core-bundle ~4.6.0
 
 matrix:
   exclude:
+  allow_failures:
+    - php: "nightly"
+    - php: "7.4snapshot"
+    - env: CONTAO_VERSION=contao/core-bundle ~4.5.0
+    - env: CONTAO_VERSION=contao/core-bundle ~4.6.0
 
-sudo: false
-
-install:
+before_script:
+  - echo "memory_limit=-1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
   - travis_retry composer self-update && composer --version
   - travis_retry composer require $CONTAO_VERSION --no-update
   - travis_retry composer update --prefer-dist --no-interaction
