Fix issue that submit buttons leads to an error.

--- a/src/Resources/config/integration.yml
+++ b/src/Resources/config/integration.yml
@@ -33,3 +33,4 @@ services:
       - '@netzmacht.contao_workflow.manager'
       - '@netzmacht.contao_workflow.entity_manager'
       - '@router'
+      - '@netzmacht.contao_toolkit.contao.input_adapter'
