--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,8 @@
         "symfony/templating": "^3.4 || ^4.0",
         "symfony/translation": "^3.4 || ^4.0",
         "symfony/validator": "^3.4 || ^4.0",
-        "terminal42/notification_center": "^1.3.4"
+        "terminal42/notification_center": "^1.3.4",
+        "bossa/phpspec2-expect": "^3.1"
     },
     "require-dev": {
         "contao/manager-plugin": "^2.1",
