--- a/src/Resources/config/listeners.yml
+++ b/src/Resources/config/listeners.yml
@@ -21,6 +21,7 @@ services:
       - '@netzmacht.contao_workflow.type_registry'
       - '@netzmacht.contao_toolkit.repository_manager'
       - '@netzmacht.contao_workflow.definition.workflow_loader'
+      - '@netzmacht.contao_workflow.manager'
       - '@translator'
 
   netzmacht.contao_workflow.listeners.dca.transition:
@@ -29,6 +30,7 @@ services:
     arguments:
       - '@netzmacht.contao_toolkit.dca.manager'
       - '@netzmacht.contao_toolkit.repository_manager'
+      - '@netzmacht.contao_workflow.manager'
       - '%netzmacht.contao_workflow.transition_types%'
 
   netzmacht.contao_workflow.listeners.dca.action:
@@ -74,6 +76,13 @@ services:
     class: Netzmacht\ContaoWorkflowBundle\EventListener\Workflow\CreateConditionalTransitionsListener
     arguments:
       - '@database_connection'
+    tags:
+      - { name: 'kernel.event_listener', event: 'netzmacht.contao_workflow.create_transition', method: 'onCreateTransition' }
+
+  netzmacht.contao_workflow.listeners.builder.workflow_change_action:
+    class: Netzmacht\ContaoWorkflowBundle\EventListener\Workflow\CreateWorkflowChangeTransitionListener
+    arguments:
+      - '@netzmacht.contao_workflow.manager'
     tags:
       - { name: 'kernel.event_listener', event: 'netzmacht.contao_workflow.create_transition', method: 'onCreateTransition' }
 
