Add edit options for conditional transitions

--- a/src/Resources/config/listeners.yml
+++ b/src/Resources/config/listeners.yml
@@ -32,6 +32,7 @@ services:
       - '@netzmacht.contao_toolkit.repository_manager'
       - '@netzmacht.contao_workflow.manager'
       - '@translator'
+      - '@netzmacht.contao_toolkit.assets_manager'
       - '%netzmacht.contao_workflow.transition_types%'
 
   netzmacht.contao_workflow.listeners.dca.action:
