--- a/src/Resources/config/listeners.yml
+++ b/src/Resources/config/listeners.yml
@@ -95,19 +95,15 @@ services:
       - '@security.authorization_checker'
       - '@netzmacht.contao_workflow.property_access_manager'
     tags:
-      - {
-          name: 'kernel.event_listener',
-          event: 'netzmacht.contao_workflow.create_transition',
-          method: 'createTransitionPermissionCondition',
-          priority: 255
-        }
-      - {
-          name: 'kernel.event_listener',
-          event: 'netzmacht.contao_workflow.create_transition',
-          method: 'createExpressionConditions'
-        }
-      - {
-          name: 'kernel.event_listener',
-          event: 'netzmacht.contao_workflow.create_transition',
-          method: 'createPropertyConditions'
-        }
+      - name: 'kernel.event_listener'
+        event: 'netzmacht.contao_workflow.create_transition'
+        method: 'createTransitionPermissionCondition'
+        priority: 255
+
+      - name: 'kernel.event_listener'
+        event: 'netzmacht.contao_workflow.create_transition'
+        method: 'createExpressionConditions'
+
+      - name: 'kernel.event_listener'
+        event: 'netzmacht.contao_workflow.create_transition'
+        method: 'createPropertyConditions'
