--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "netzmacht/contao-toolkit": "~3.0",
         "netzmacht/workflow": "^2.1@dev",
         "patchwork/utf8": "^1.2",
+        "psr/log": "^1.1",
         "sensio/framework-extra-bundle": "~5.0",
         "symfony/config": "^3.4 || ^4.0",
         "symfony/dependency-injection": "^3.4.26 || ^4.1.12",
@@ -45,7 +46,8 @@
         "symfony/templating": "^3.4 || ^4.0",
         "symfony/translation": "^3.4 || ^4.0",
         "symfony/validator": "^3.4 || ^4.0",
-        "terminal42/notification_center": "^1.3.4"
+        "terminal42/notification_center": "^1.3.4",
+        "twig/twig": "^1.26 || ^2.0"
     },
     "require-dev": {
         "contao/manager-plugin": "^2.1",
