Track related contao model changes and introduce PropertyAccessorFactory
 - Track changes of related models when changes are made using the property accessor
 - PropertyAccessManager requires instances of PropertyAccessorFactory
 - Custom property accessor may be registered as tagged services
 - Implement a ReadonlyPropertyAccessor

--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,8 @@
     },
     "require-dev": {
         "contao/manager-plugin": "^2.1",
-        "phpcq/all-tasks": "^1.2"
+        "phpcq/all-tasks": "^1.2",
+        "bossa/phpspec2-expect": "^3.1"
     },
     "extra": {
         "branch-alias": {
