Implement new change property action
New action allow to update property value of the current entity. For Contao entities updates of related entities is supported as well

--- a/src/Resources/config/actions.yml
+++ b/src/Resources/config/actions.yml
@@ -32,3 +32,10 @@ services:
       - '@translator'
     tags:
       - { name: 'netzmacht.contao_workflow.action' }
+
+  netzmacht.contao.workflow.action_factory.update_property:
+    class: Netzmacht\ContaoWorkflowBundle\Workflow\Flow\Action\UpdatePropertyAction\UpdatePropertyActionFactory
+    arguments:
+      - '@netzmacht.contao_workflow.property_access_manager'
+    tags:
+      - { name: 'netzmacht.contao_workflow.action' }
