--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
         "symfony/http-kernel": "^3.4 || ^4.0",
         "symfony/options-resolver": "^3.4 || ^4.0",
         "symfony/routing": "^3.4 || ^4.0",
-        "symfony/security": "^3.4 || ^4.0",
+        "symfony/security-core": "^3.4 || ^4.0",
         "symfony/templating": "^3.4 || ^4.0",
         "symfony/translation": "^3.4 || ^4.0",
         "symfony/validator": "^3.4 || ^4.0",
@@ -50,9 +50,9 @@
         "twig/twig": "^1.26 || ^2.0"
     },
     "require-dev": {
+        "bossa/phpspec2-expect": "^3.1",
         "contao/manager-plugin": "^2.1",
-        "phpcq/all-tasks": "^1.2",
-        "bossa/phpspec2-expect": "^3.1"
+        "phpcq/all-tasks": "^1.2"
     },
     "extra": {
         "branch-alias": {
