--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,8 @@
     "require-dev": {
         "bossa/phpspec2-expect": "^3.1",
         "contao/manager-plugin": "^2.1",
-        "phpcq/all-tasks": "^1.2"
+        "phpcq/all-tasks": "^1.2",
+        "phpmd/phpmd": "~2.8.0"
     },
     "extra": {
         "branch-alias": {
