Add a frontend module for the workflow transition

--- a/src/Resources/config/listeners.yml
+++ b/src/Resources/config/listeners.yml
@@ -14,6 +14,12 @@ services:
     class: Netzmacht\ContaoWorkflowBundle\EventListener\Dca\CommonListener
     public: true
 
+  netzmacht.contao_workflow.listeners.dca.module:
+    class: Netzmacht\ContaoWorkflowBundle\EventListener\Dca\ModuleCallbackListener
+    public: true
+    arguments:
+      - '@netzmacht.contao_workflow.manager'
+
   netzmacht.contao_workflow.listeners.dca.workflow:
     class: Netzmacht\ContaoWorkflowBundle\EventListener\Dca\WorkflowCallbackListener
     public: true
