--- a/src/Resources/config/templates.yml
+++ b/src/Resources/config/templates.yml
@@ -22,4 +22,6 @@ parameters:
 
   netzmacht.contao_workflow.templates.html_view:
     step: '@@NetzmachtContaoWorkflow/backend/step.html.twig'
-    transition: '@@NetzmachtContaoWorkflow/backend/transition.html.twig'
+    transition:
+      frontend: '@@NetzmachtContaoWorkflow/frontend/transition.html.twig'
+      backend: '@@NetzmachtContaoWorkflow/backend/transition.html.twig'
