--- a/src/Resources/config/integration.yml
+++ b/src/Resources/config/integration.yml
@@ -26,6 +26,7 @@ services:
       - '@netzmacht.contao_workflow.manager'
       - '@netzmacht.contao_workflow.entity_manager'
       - '@router'
+      - '@security.authorization_checker'
 
   Netzmacht\ContaoWorkflowBundle\EventListener\Integration\SubmitButtonsListener:
     public: true
