--- a/composer.json
+++ b/composer.json
@@ -52,8 +52,12 @@
     "require-dev": {
         "bossa/phpspec2-expect": "^3.1",
         "contao/manager-plugin": "^2.1",
-        "phpcq/all-tasks": "^1.2",
-        "phpmd/phpmd": "~2.8.0"
+        "phpcq/all-tasks": "^1.3.0@dev",
+        "phpcq/author-validation": "^1.5@dev",
+        "phpcq/autoload-validation": "^1.3@dev",
+        "phpcq/branch-alias-validation": "^1.3@dev",
+        "phpcq/coding-standard": "^2.1@dev",
+        "phpcq/travis-configuration-check": "^1.3@dev"
     },
     "extra": {
         "branch-alias": {
