Provide `userId` and the user model as `user` for the `UpdatePropertyAction` expression

--- a/src/Resources/config/actions.yml
+++ b/src/Resources/config/actions.yml
@@ -55,6 +55,8 @@ services:
     arguments:
       - '@netzmacht.contao_workflow.property_access_manager'
       - '@netzmacht.contao_workflow.expression_language'
+      - '@netzmacht.contao_toolkit.repository_manager'
+      - '@netzmacht.contao_workflow.security.user'
     tags:
       - { name: 'netzmacht.contao_workflow.action' }
 
