--- a/composer.json
+++ b/composer.json
@@ -52,12 +52,12 @@
     "require-dev": {
         "bossa/phpspec2-expect": "^3.1",
         "contao/manager-plugin": "^2.1",
-        "phpcq/all-tasks": "^1.3.0@dev",
-        "phpcq/author-validation": "^1.5@dev",
-        "phpcq/autoload-validation": "^1.3@dev",
-        "phpcq/branch-alias-validation": "^1.3@dev",
-        "phpcq/coding-standard": "^2.1@dev",
-        "phpcq/travis-configuration-check": "^1.3@dev"
+        "phpcq/all-tasks": "^1.3",
+        "phpcq/author-validation": "^1.5",
+        "phpcq/autoload-validation": "^1.3",
+        "phpcq/branch-alias-validation": "^1.3",
+        "phpcq/coding-standard": "^2.1",
+        "phpcq/travis-configuration-check": "^1.3"
     },
     "extra": {
         "branch-alias": {
