--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,9 @@ php:
   - "7.1"
 
 env:
-  - CONTAO_VERSION=contao/core-bundle ~4.4.0
-  - CONTAO_VERSION=contao/core-bundle ~4.9.0
+  - "CONTAO_VERSION=contao/core-bundle ~4.4.0"
+  - "CONTAO_VERSION=contao/core-bundle ~4.9.0"
+  - "CONTAO_VERSION=contao/core-bundle ~4.10.0"
 
 before_script:
   - echo "memory_limit=-1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
