--- a/.travis.yml
+++ b/.travis.yml
@@ -14,14 +14,14 @@ php:
   - "7.1"
 
 env:
-  - "CONTAO_VERSION=contao/core-bundle ~4.4.0"
-  - "CONTAO_VERSION=contao/core-bundle ~4.9.0"
-  - "CONTAO_VERSION=contao/core-bundle ~4.10.0"
+  - CONTAO_VERSION=~4.4.0
+  - CONTAO_VERSION=~4.9.0
+  - CONTAO_VERSION=~4.10.0
 
 before_script:
   - echo "memory_limit=-1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
   - travis_retry composer self-update && composer --version
-  - travis_retry composer require $CONTAO_VERSION --no-update
+  - travis_retry composer require contao/core-bundle $CONTAO_VERSION --no-update
   - travis_retry composer update --prefer-dist --no-interaction
 
 script: ant -keep-going
