Create step view if workflow is not already started

--- a/src/Resources/config/templates.yml
+++ b/src/Resources/config/templates.yml
@@ -21,6 +21,7 @@ parameters:
     "text/html": '@@NetzmachtContaoWorkflow/sections/errors.html.twig'
 
   netzmacht.contao_workflow.templates.html_view:
+    unknown: '@@NetzmachtContaoWorkflow/backend/default.html.twig'
     step: '@@NetzmachtContaoWorkflow/backend/step.html.twig'
     transition:
       frontend: '@@NetzmachtContaoWorkflow/frontend/transition.html.twig'
