use scope matcher to only add CSS to backend

--- a/src/Resources/config/listeners.yml
+++ b/src/Resources/config/listeners.yml
@@ -61,6 +61,7 @@ services:
     public: true
     arguments:
       - '@netzmacht.contao_toolkit.assets_manager'
+      - '@netzmacht.contao_toolkit.routing.scope_matcher'
     tags:
       - { name: 'kernel.event_listener', event: 'kernel.request', method: 'addBackendAssets' }
 
