--- a/composer.json
+++ b/composer.json
@@ -21,13 +21,13 @@
     "source": "https://github.com/netzmacht/contao-workflow"
   },
   "require": {
-    "php": "^7.1",
+    "php": "^7.1 || ^8.0",
     "ext-json": "*",
     "ext-pdo": "*",
     "adamquaile/symfony-fieldset-bundle": "^1.1",
-    "beberlei/assert": "^2.0 || ^3.0",
-    "contao-community-alliance/meta-palettes": "~1.11 || ~2.0",
-    "contao/core-bundle": "~4.4",
+    "beberlei/assert": "^3.0",
+    "contao-community-alliance/meta-palettes": "^2.0",
+    "contao/core-bundle": "^4.9",
     "doctrine/dbal": "^2.13",
     "friends-of-contao/contao-associategroups": "~1.3",
     "mathiasverraes/classfunctions": "~1.1",
@@ -38,21 +38,21 @@
     "patchwork/utf8": "^1.2",
     "psr/log": "^1.1",
     "sensio/framework-extra-bundle": "~5.0",
-    "symfony/config": "^3.4 || ^4.0",
-    "symfony/dependency-injection": "^3.4.26 || ^4.1.12",
-    "symfony/event-dispatcher": "^3.4 || ^4.0",
+    "symfony/config": "^4.4 || ^5.0",
+    "symfony/dependency-injection": "^4.1.12 || ^5.0",
+    "symfony/event-dispatcher": "^4.4",
     "symfony/event-dispatcher-contracts": "^1.1.2 || ^2",
-    "symfony/expression-language": "^3.4 || ^4.0 || ^5.0",
-    "symfony/form": "^3.4 || ^4.0",
-    "symfony/http-foundation": "^3.4.35 || ^4.2.12",
-    "symfony/http-kernel": "^3.4 || ^4.4.13",
-    "symfony/options-resolver": "^3.4 || ^4.0",
-    "symfony/routing": "^3.4 || ^4.0",
-    "symfony/security-core": "^3.4 || ^4.1.12",
-    "symfony/templating": "^3.4 || ^4.0 || ^5.0",
-    "symfony/translation": "^3.4 || ^4.0",
+    "symfony/expression-language": "^4.4 || ^5.0",
+    "symfony/form": "^4.4 || ^5.0",
+    "symfony/http-foundation": "^4.2.12 || ^5.0",
+    "symfony/http-kernel": "^4.4.13 || ^5.0",
+    "symfony/options-resolver": "^4.4 || ^5.0",
+    "symfony/routing": "^4.4 || ^5.0",
+    "symfony/security-core": "^4.1.12 || ^5.0",
+    "symfony/templating": "^4.4 || ^5.0",
+    "symfony/translation": "^4.4 || ^5.0",
     "symfony/translation-contracts": "^1.1.2 || ^2",
-    "symfony/validator": "^3.4 || ^4.0",
+    "symfony/validator": "^4.4 || ^5.0",
     "terminal42/notification_center": "^1.3.4",
     "twig/twig": "^1.26 || ^2.0"
   },
