Fix more issues detected by phpcq

--- a/.github/workflows/diagnostics.yml
+++ b/.github/workflows/diagnostics.yml
@@ -23,6 +23,12 @@ jobs:
           - php: 8.0
             output: '-o default'
             phpcq_install: 'update'
+          - php: 8.1
+            output: '-o default'
+            phpcq_install: 'update'
+          - php: 8.2
+            output: '-o default'
+            phpcq_install: 'update'
 
     steps:
       - name: Pull source
