--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     "beberlei/assert": "^3.0",
     "contao-community-alliance/meta-palettes": "^2.0",
     "contao/core-bundle": "^4.9",
-    "doctrine/dbal": "^2.13",
+    "doctrine/dbal": "^2.13 || ^3.1",
     "friends-of-contao/contao-associategroups": "~1.3",
     "mathiasverraes/classfunctions": "~1.1",
     "menatwork/contao-multicolumnwizard-bundle": "^3.3.14",
@@ -45,7 +45,7 @@
     "symfony/expression-language": "^4.4 || ^5.0",
     "symfony/form": "^4.4 || ^5.0",
     "symfony/http-foundation": "^4.2.12 || ^5.0",
-    "symfony/http-kernel": "^4.4.13 || ^5.0",
+    "symfony/http-kernel": "^4.4.13 || ^5.1.5",
     "symfony/options-resolver": "^4.4 || ^5.0",
     "symfony/routing": "^4.4 || ^5.0",
     "symfony/security-core": "^4.4.23 || ^5.2.8",
@@ -66,6 +66,11 @@
   "autoload": {
     "psr-4": {
       "Netzmacht\\ContaoWorkflowBundle\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "spec\\Netzmacht\\ContaoWorkflowBundle\\": "spec/"
     }
   },
   "config": {
