--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
     "sensio/framework-extra-bundle": "~5.0",
     "symfony/config": "^4.4 || ^5.0",
     "symfony/dependency-injection": "^4.1.12 || ^5.0",
-    "symfony/event-dispatcher": "^4.4",
+    "symfony/event-dispatcher": "^4.4 || ^5.4",
     "symfony/event-dispatcher-contracts": "^1.1.2 || ^2",
     "symfony/expression-language": "^4.4 || ^5.0",
     "symfony/form": "^4.4 || ^5.0",
