--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,7 @@
     "symfony/translation-contracts": "^1.1.2 || ^2",
     "symfony/validator": "^4.4 || ^5.0",
     "terminal42/notification_center": "^1.3.4",
-    "twig/twig": "^1.26 || ^2.0"
+    "twig/twig": "^1.26 || ^2.0 || ^3.0"
   },
   "require-dev": {
     "contao/manager-plugin": "^2.1",
