Restore compatibility with netzmacht/contao-form-bundle ^2.0 and fix incompatibility with Symfony 5

--- a/.phpcq.yaml.dist
+++ b/.phpcq.yaml.dist
@@ -111,6 +111,11 @@ tasks:
       <<: *phpcs-config
       fix: true
 
+  composer-normalize:
+    config:
+      ignore_output:
+        - '#Root package is not of type "project", we will not installing Contao extensions\.#'
+
   composer-normalize-fix:
     plugin: composer-normalize
     config:
